@@ -1,1 +1,3 @@
 # Book Application With Design Patterns
+
+--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
